misc: fixes for travis deployment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
 
 after_success:
     - export SSHPASS=$DEPLOY_PASS
-    - sshpass -e scp -R ./build $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+    - sshpass -e scp -rp ./build $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
 
 env:
   global:
