misc: fixed travis ssh issues.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ addons:
             - sshpass
 
 after_success:
-    - export SSHPASS=$DEPLOY_PASS
-    - sshpass -e scp -rp ./build $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && export SSHPASS=$DEPLOY_PASS
+    - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && sshpass -e scp -o stricthostkeychecking=no -rp ./build $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
 
 env:
   global:
