--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ branches:
   only:
   - master
 
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
 before_script:
   - npm install -g @angular/cli
 
@@ -15,7 +20,11 @@ script:
 
 addons:
     apt:
+    sources:
+        - google-chrome
         packages:
+            - google-chrome-stable
+            - google-chrome-beta
             - sshpass
 
 after_success:
