misc: fixes for a single test run.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - npm install -g @angular/cli
 
 script:
-  - ng test
+  - ng test --single-run --code-coverage
   - ng build --prod
 
 addons:
