--- a/.travis.yml
+++ b/.travis.yml
@@ -16,18 +16,13 @@ before_install:
   - sudo apt-get install -y libappindicator1 fonts-liberation
   - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
   - sudo dpkg -i google-chrome*.deb
+  - sudo apt-get install -y sshpass
 
 before_script:
   - npm install -g @angular/cli
 
 script:
   - ng build --prod
-
-addons:
-apt:
-  sources:
-    packages:
-      - sshpass
 
 after_success:
   - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && export SSHPASS=$DEPLOY_PASS
