--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,14 @@ script:
 
 after_success:
 - if [ $TRAVIS_PULL_REQUEST == "false" ]; then
-  docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-  export REPO=noefc/client
-  export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-  docker build -f Dockerfile -t $REPO:$COMMIT .
-  docker tag $REPO:$COMMIT $REPO:$TAG
-  docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-  docker push $REPO
-  docker build -t noe-fc/client .
+  docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS;
+  export REPO=noefc/client;
+  export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`;
+  docker build -f Dockerfile -t $REPO:$COMMIT .;
+  docker tag $REPO:$COMMIT $REPO:$TAG;
+  docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER;
+  docker push $REPO;
+  docker build -t noe-fc/client .;
   fi
 
 env:
