--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/jwt-decode": "^1.4.28",
     "core-js": "^2.4.1",
+    "jwt-decode": "^2.2.0",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
