--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@types/jwt-decode": "^1.4.28",
+    "angular-calendar": "^0.15.4",
     "core-js": "^2.4.1",
     "jwt-decode": "^2.2.0",
     "rxjs": "^5.1.0",
